--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,20 +1,249 @@
-#dropdown-menu-0 .hide-buttons [data-button] {
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
+
+
+
+
+
+
+#dropdown-menu-3 .hide-buttons [data-button] {
   display: none !important;
 }
-#dropdown-menu-0 .nav .link,
-#dropdown-menu-0 .dropdown-item {
+#dropdown-menu-3 .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-3 .nav .link,
+#dropdown-menu-3 .dropdown-item {
   font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-3 .navbar,
+#dropdown-menu-3 .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-3 .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-3 .dropdown-menu a:hover,
+#dropdown-menu-3 .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-3 .navbar-toggler {
+  color: #000000;
+}
+#header4-5 P {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#header4-5 H1 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#msg-box5-2 .mbr-header__text {
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-2 .mbr-header__subtext {
   color: #ffffff;
 }
-#dropdown-menu-0 .navbar,
-#dropdown-menu-0 .dropdown-menu {
-  background: #333333;
+#msg-box5-2 .mbr-article {
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
 }
-#dropdown-menu-0 .dropdown-menu .dropdown-toggle[aria-expanded="true"],
-#dropdown-menu-0 .dropdown-menu a:hover,
-#dropdown-menu-0 .dropdown-menu a:focus {
-  background: #292929;
+#content5-6 .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
 }
-#dropdown-menu-0 .navbar-toggler {
+#content5-6 .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-6 .mbr-article {
+  color: #fff;
+}
+#contacts1-8 STRONG {
+  color: #cccccc;
+}
+
+
+
+
+#dropdown-menu-a .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-a .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-a .nav .link,
+#dropdown-menu-a .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-a .navbar,
+#dropdown-menu-a .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-a .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-a .dropdown-menu a:hover,
+#dropdown-menu-a .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-a .navbar-toggler {
+  color: #000000;
+}
+#msg-box4-d .mbr-header__text {
   color: #ffffff;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#msg-box4-d .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-d .mbr-article {
+  color: #ffffff;
+}
+#msg-box4-d .mbr-article P {
+  font-family: 'Oxygen', sans-serif;
+}
+#msg-box3-g .mbr-header .mbr-header__text {
+  text-align: center;
+}
+#msg-box3-g .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-g .mbr-article P {
+  color: #000000;
+}
+#contacts1-b STRONG {
+  color: #cccccc;
+}
+
+
+#dropdown-menu-h .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-h .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-h .nav .link,
+#dropdown-menu-h .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-h .navbar,
+#dropdown-menu-h .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-h .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-h .dropdown-menu a:hover,
+#dropdown-menu-h .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-h .navbar-toggler {
+  color: #000000;
+}
+#contacts1-i STRONG {
+  color: #cccccc;
+}
+
+
+#dropdown-menu-k .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-k .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-k .nav .link,
+#dropdown-menu-k .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-k .navbar,
+#dropdown-menu-k .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-k .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-k .dropdown-menu a:hover,
+#dropdown-menu-k .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-k .navbar-toggler {
+  color: #000000;
+}
+#contacts1-l STRONG {
+  color: #cccccc;
+}
+
+
+
+
+
+
+#dropdown-menu-m .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-m .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-m .nav .link,
+#dropdown-menu-m .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-m .navbar,
+#dropdown-menu-m .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-m .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-m .dropdown-menu a:hover,
+#dropdown-menu-m .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-m .navbar-toggler {
+  color: #000000;
+}
+#msg-box3-o .mbr-header .mbr-header__text {
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#msg-box3-o .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-o .mbr-article P {
+  color: #000000;
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
+}
+#msg-box4-t .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box4-t .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-t .mbr-article {
+  color: #ffffff;
+}
+#msg-box4-t .mbr-article P {
+  color: #000000;
+  font-size: 18px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#msg-box4-u .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box4-u .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-u .mbr-article {
+  color: #ffffff;
+}
+#msg-box4-u .mbr-article P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
+}
+#contacts1-n STRONG {
+  color: #cccccc;
 }
