--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7,6 +7,7 @@
 
 
 
+
 #dropdown-menu-3 .hide-buttons [data-button] {
   display: none !important;
 }
@@ -58,6 +59,9 @@
 }
 #content5-6 .mbr-article {
   color: #fff;
+}
+#content5-6 .mbr-article P {
+  font-family: 'Source Sans Pro', sans-serif;
 }
 #contacts1-8 STRONG {
   color: #000000;
@@ -300,5 +304,51 @@
   color: #000000;
 }
 #contacts1-n P {
+  color: #000000;
+}
+
+
+
+
+
+#dropdown-menu-12 .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-12 .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-12 .nav .link,
+#dropdown-menu-12 .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-12 .navbar,
+#dropdown-menu-12 .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-12 .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-12 .dropdown-menu a:hover,
+#dropdown-menu-12 .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-12 .navbar-toggler {
+  color: #000000;
+}
+#header3-14 P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#header3-14 H3 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#content1-15 P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#contacts1-13 STRONG {
+  color: #000000;
+}
+#contacts1-13 P {
   color: #000000;
 }
