--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8,6 +8,7 @@
 
 
 
+
 #dropdown-menu-3 .hide-buttons [data-button] {
   display: none !important;
 }
@@ -68,7 +69,10 @@
 }
 #contacts1-8 P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
+
 
 
 
@@ -124,7 +128,10 @@
 }
 #contacts1-b P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
+
 
 
 #dropdown-menu-h .hide-buttons [data-button] {
@@ -156,7 +163,10 @@
 }
 #contacts1-i P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
+
 
 
 
@@ -228,7 +238,10 @@
 }
 #contacts1-l P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
+
 
 
 
@@ -305,7 +318,10 @@
 }
 #contacts1-n P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
+
 
 
 
@@ -351,4 +367,97 @@
 }
 #contacts1-13 P {
   color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
+}
+
+
+
+
+
+
+#dropdown-menu-1a .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-1a .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-1a .nav .link,
+#dropdown-menu-1a .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-1a .navbar,
+#dropdown-menu-1a .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-1a .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-1a .dropdown-menu a:hover,
+#dropdown-menu-1a .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-1a .navbar-toggler {
+  color: #000000;
+}
+#header3-1i H3 {
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 30px;
+}
+#features1-1f P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  text-align: left;
+}
+#features1-1f .mbr-section__col .mbr-header__text {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
+}
+#contacts1-1b STRONG {
+  color: #000000;
+}
+#contacts1-1b P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
+}
+
+
+
+
+#dropdown-menu-1j .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-1j .navbar-brand a {
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-1j .nav .link,
+#dropdown-menu-1j .dropdown-item {
+  font-size: 1em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#dropdown-menu-1j .navbar,
+#dropdown-menu-1j .dropdown-menu {
+  background: #ffffff;
+}
+#dropdown-menu-1j .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-1j .dropdown-menu a:hover,
+#dropdown-menu-1j .dropdown-menu a:focus {
+  background: #f5f5f5;
+}
+#dropdown-menu-1j .navbar-toggler {
+  color: #000000;
+}
+#testimonials1-1l .mbr-section__header {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+#contacts1-1k STRONG {
+  color: #000000;
+}
+#contacts1-1k P {
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 17px;
 }
